# movie-data-api

./: .example.env  Cargo.toml  README.md
src/: cache.rs  handlers.rs  main.rs  models.rs
