[package]
name = "movie-data-api"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.216", features = ["derive"] }
actix-web = "4.9.0"
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio-native-tls", "macros", "chrono"] }
chrono = { version = "0.4.39", features = ["serde"] }
dotenv = "0.15.0"